Fixes #88: Fix start page image on small screens and fix sidenav overlay

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -228,7 +228,7 @@ a.disabled {
   z-index: 100;
 }
 #sidenav-overlay {
-  z-index: 99;
+  z-index: 0;
 }
 .nav-fixed + main {
   margin-top: 64px;
@@ -592,7 +592,7 @@ ul.border-separated li:last-child {
   height: 100vh;
   width: 100%;
   background: url(/static/img/book5.jpg) no-repeat center bottom;
-  background-size: 100vw;
+  background-size: cover;
 }
 .page-start nav {
   margin-top: 20px;
